# HW_WEB8

./: README.md  alembic.ini  connection.py  consumer.py  consumer_email.py  consumer_sms.py  find_from_db.py  models.py  producer.py  pyproject.toml  upload_db.py
alembic/versions/: 749b31f5098e_.py  77155f2a8fec_.py  b44c19fec958_.py
first/: docker-compose.yml  pyproject.toml
second/: alembic.ini  consumer.py  consumer_email.py  consumer_sms.py  models_contact.py  producer.py  pyproject.toml
