[tool.poetry]
name = "first"
version = "0.1.0"
description = ""
authors = ["Denko <officedenko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
docker = "^6.1.3"
redis = "^5.0.1"
mongoengine = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
