[tool.poetry]
name = "second"
version = "0.1.0"
description = ""
authors = ["Denko <officedenko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pika = "^1.3.2"
docker = "^6.1.3"
faker = "^19.8.0"
mongoengine = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
